[package]
name = "mulperc"
version = "0.1.0"
authors = ["mrobakowski <mrobakowski@networkedassets.org>"]

[dependencies]
rayon = "0.5.0"
rand = "0.3"
nalgebra = "0.10.1"
image = "0.10.3"
clap = "2.19.0"
pbr = "1.0.0-alpha.1"
serde = "0.8.19"
serde_derive = "0.8.19"
bincode = "0.6.0"
find_folder = "*"
nfd = "*"
flate2 = "*"
libc = "*"
[dependencies.conrod]
version = "*"
default-features = false
features = ["glium", "glutin"]

[profile.release]
debug = true